- Fixed bug #49719 (ReflectionClass::hasProperty returns true for a private property in base class)